v10/docs/ModelsMetadataSingleUpdateRequest.md
# ModelsMetadataSingleUpdateRequest

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**MetadataName** | Pointer to **string** |  | [optional] 
**Value** | Pointer to **string** |  | [optional] 
**OverwriteExisting** | Pointer to **bool** |  | [optional] 

## Methods

### NewModelsMetadataSingleUpdateRequest

`func NewModelsMetadataSingleUpdateRequest() *ModelsMetadataSingleUpdateRequest`

NewModelsMetadataSingleUpdateRequest instantiates a new ModelsMetadataSingleUpdateRequest object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsMetadataSingleUpdateRequestWithDefaults

`func NewModelsMetadataSingleUpdateRequestWithDefaults() *ModelsMetadataSingleUpdateRequest`

NewModelsMetadataSingleUpdateRequestWithDefaults instantiates a new ModelsMetadataSingleUpdateRequest object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetMetadataName

`func (o *ModelsMetadataSingleUpdateRequest) GetMetadataName() string`

GetMetadataName returns the MetadataName field if non-nil, zero value otherwise.

### GetMetadataNameOk

`func (o *ModelsMetadataSingleUpdateRequest) GetMetadataNameOk() (*string, bool)`

GetMetadataNameOk returns a tuple with the MetadataName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetMetadataName

`func (o *ModelsMetadataSingleUpdateRequest) SetMetadataName(v string)`

SetMetadataName sets MetadataName field to given value.

### HasMetadataName

`func (o *ModelsMetadataSingleUpdateRequest) HasMetadataName() bool`

HasMetadataName returns a boolean if a field has been set.

### GetValue

`func (o *ModelsMetadataSingleUpdateRequest) GetValue() string`

GetValue returns the Value field if non-nil, zero value otherwise.

### GetValueOk

`func (o *ModelsMetadataSingleUpdateRequest) GetValueOk() (*string, bool)`

GetValueOk returns a tuple with the Value field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetValue

`func (o *ModelsMetadataSingleUpdateRequest) SetValue(v string)`

SetValue sets Value field to given value.

### HasValue

`func (o *ModelsMetadataSingleUpdateRequest) HasValue() bool`

HasValue returns a boolean if a field has been set.

### GetOverwriteExisting

`func (o *ModelsMetadataSingleUpdateRequest) GetOverwriteExisting() bool`

GetOverwriteExisting returns the OverwriteExisting field if non-nil, zero value otherwise.

### GetOverwriteExistingOk

`func (o *ModelsMetadataSingleUpdateRequest) GetOverwriteExistingOk() (*bool, bool)`

GetOverwriteExistingOk returns a tuple with the OverwriteExisting field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetOverwriteExisting

`func (o *ModelsMetadataSingleUpdateRequest) SetOverwriteExisting(v bool)`

SetOverwriteExisting sets OverwriteExisting field to given value.

### HasOverwriteExisting

`func (o *ModelsMetadataSingleUpdateRequest) HasOverwriteExisting() bool`

HasOverwriteExisting returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


